# client-server_pet_cpp

./: README.md  build_and_run.sh
project/: CMakeLists.txt
project/client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qt-client.pro
project/common/: CMakeLists.txt  packet.cpp  packet.h
project/server/: CMakeLists.txt  clientinfo.cpp  clientinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  qt-server.pro
