cmake_minimum_required(VERSION 3.16)
project(UDP_Client_Server)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(common)

set(QT_REQUIRED_COMPONENTS Core Widgets Network)
find_package(Qt5 5.15 COMPONENTS ${QT_REQUIRED_COMPONENTS} REQUIRED)
set(QT_VERSION_MAJOR 5)
message(STATUS "Qt5 найден, версия: ${Qt5_VERSION}")

get_target_property(_qt_moc_location Qt5::moc IMPORTED_LOCATION)
if(NOT _qt_moc_location)
    get_target_property(_qt_moc_location Qt5::moc IMPORTED_LOCATION_RELEASE)
endif()
if(NOT _qt_moc_location)
    get_target_property(_qt_moc_location Qt5::moc IMPORTED_LOCATION_RELWITHDEBINFO)
endif()
if(NOT _qt_moc_location)
    get_target_property(_qt_moc_location Qt5::moc IMPORTED_LOCATION_MINSIZEREL)
endif()
if(NOT _qt_moc_location)
    get_target_property(_qt_moc_location Qt5::moc IMPORTED_LOCATION_DEBUG)
endif()
if(_qt_moc_location)
    set(CMAKE_AUTOMOC_MOC_EXECUTABLE ${_qt_moc_location})
endif()

add_subdirectory(client)
add_subdirectory(server)